compiler/tests/ar/errors/pure_global_write.salam
// لغة: العربية
// توقع: E013
متغير مجموع := 0

نقي دالة زد(قيمة : صحيح) : صحيح:
    مجموع = مجموع + قيمة
    أرجع مجموع
نهاية

دالة الرئيسية:
    اطبع(زد(2))
نهاية
